--- a/resources/views/templates/partials/navigation.twig
+++ b/resources/views/templates/partials/navigation.twig
@@ -38,8 +38,8 @@
                           {% endif %}
                 
                 {% else %}
-                 <li><a href="{{ path_for('auth.signup')}}">Signup</a></li>
-                 <li><a href="{{ path_for('auth.signin')}}">Signin</a></li>
+                 <li><a href="{{ path_for('auth.signup')}}"><i class="fas fa-user-plus"></i> Signup</a></li>
+                 <li><a href="{{ path_for('auth.signin')}}"><i class="fas fa-sign-in-alt"></i> Signin</a></li>
                 
                 {% endif %}
                 <li><a href="{{ path_for('about')}}">About Us</a></li>
