--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -16,7 +16,9 @@
 
 
 <!-- Import fontawesome for nice icons. Find icons here => http://fontawesome.io/icons/ -->
-<script src="https://use.fontawesome.com/a4d069f591.js"></script>
+<script src="https://kit.fontawesome.com/febafebe3a.js"></script>
+<!-- Getting variable from controller -->
+<!-- <script src="{{ fontAwesomeKitCode }}"></script> -->
 
 	</head>
 	
