--- a/resources/views/auth/signin.twig
+++ b/resources/views/auth/signin.twig
@@ -43,7 +43,7 @@
               {% endif %}	
             </div>
 
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Sign up</button>
+            <button class="btn btn-primary btn-lg btn-block" type="submit">Sign in</button>
             
              {{ csrf.field | raw }}
             <a class="login-link" href="#">Login</a>
