--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>RawPHP</title>
+		<title>Job-Recruitment Website</title>
 		
 <!-- Latest compiled and minified CSS -->
 <link href="{{ base_url()}}/css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
 
 		<br/>
 
-		{% include 'templates/partials/footer.twig' %}
+		<!-- {% include 'templates/partials/footer.twig' %} -->
 		
 		
 		
