--- a/resources/views/templates/partials/navigation.twig
+++ b/resources/views/templates/partials/navigation.twig
@@ -3,7 +3,7 @@
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
                 <span class="sr-only">Toggle navigation</span>
               </button>
-              <a class="navbar-brand" href="{{ path_for('home')}}">RawPHP</a>
+              <a class="navbar-brand" href="{{ path_for('home')}}">Job-Recruitment Website</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-01">
               <ul class="nav navbar-nav navbar-right">
@@ -42,7 +42,7 @@
                  <li><a href="{{ path_for('auth.signin')}}"><i class="fas fa-sign-in-alt"></i> Signin</a></li>
                 
                 {% endif %}
-                <li><a href="{{ path_for('about')}}">About Us</a></li>
+                <li><a href="{{ path_for('about')}}"><i class="fas fa-users"></i> About Us</a></li>
                </ul>
                <form class="navbar-form navbar-right" action="#" role="search">
                 <div class="form-group">
