--- a/resources/views/users/edit.twig
+++ b/resources/views/users/edit.twig
@@ -68,7 +68,7 @@
               {% endif %}	
             </div>
 
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Sign up</button>
+            <button class="btn btn-primary btn-lg btn-block" type="submit">Sign in</button>
             
              {{ csrf.field | raw }}
             <a class="login-link" href="{{ path_for('auth.signin')}}">Login</a>
