admin navigation updated

--- a/resources/views/templates/partials/navigation.twig
+++ b/resources/views/templates/partials/navigation.twig
@@ -32,7 +32,8 @@
                                     <ul class="dropdown-menu">
                                         <li><a href="{{ path_for('users.index') }}">All Users </a></li>
                                         <li><a href="{{ path_for('posts.index') }}">All Posts </a></li>  
-                                        <li><a href="{{ path_for('roles.index') }}">All Roles </a></li>  
+                                        <li><a href="{{ path_for('roles.index') }}">All Roles </a></li>
+                                        <li><a href="{{ path_for('countries.index') }}">All Countries </a></li> 
                                     </ul>
                                 </li> 
                           {% endif %}
