--- a/resources/views/users/edit.twig
+++ b/resources/views/users/edit.twig
@@ -68,19 +68,10 @@
                 {% endfor %}
               </select>
               <label class="login-field-icon fui-lock" for="login-country"></label>
-              {% if errors.password %}
+              {% if errors.country %}
               	<span class="help-block">{{ errors.country | first }}</span>
               {% endif %}	
             </div>
-
-            <div class="form-group">
-              <input type="password" class="form-control login-field" value=""  name="password" placeholder="Password" id="login-pass">
-              <label class="login-field-icon fui-lock" for="login-pass"></label>
-              {% if errors.password %}
-              	<span class="help-block">{{ errors.password | first }}</span>
-              {% endif %}	
-            </div>
-
             <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
             
              {{ csrf.field | raw }}
