--- a/resources/views/countries/add.twig
+++ b/resources/views/countries/add.twig
@@ -3,7 +3,7 @@
 	{% block content %}
 <div class="row">
 	<div class="col-md-10">
-		<div id="postlist">
+		<div id="provincelist">
 			<div class="panel">
                 <div class="panel-heading">
                     <div class="text-center">
