--- a/resources/views/templates/partials/navigation.twig
+++ b/resources/views/templates/partials/navigation.twig
@@ -33,7 +33,8 @@
                                         <li><a href="{{ path_for('users.index') }}">All Users </a></li>
                                         <li><a href="{{ path_for('posts.index') }}">All Posts </a></li>  
                                         <li><a href="{{ path_for('roles.index') }}">All Roles </a></li>
-                                        <li><a href="{{ path_for('countries.index') }}">All Countries </a></li> 
+                                        <li><a href="{{ path_for('countries.index') }}">All Countries </a></li>
+                                        <li><a href="{{ path_for('provinces.index') }}">All Provinces </a></li> 
                                     </ul>
                                 </li> 
                           {% endif %}
