--- a/resources/views/users/edit.twig
+++ b/resources/views/users/edit.twig
@@ -72,6 +72,18 @@
               	<span class="help-block">{{ errors.country | first }}</span>
               {% endif %}	
             </div>
+            <div class="form-group">
+              <select class="form-control login-field" name="province_id">
+                <option>Select province</option>
+                {% for province in provinces %}
+                <option value="{{province.id}}">{{province.name}}</option>
+                {% endfor %}
+              </select>
+              <label class="login-field-icon fui-lock" for="login-province"></label>
+              {% if errors.province %}
+              	<span class="help-block">{{ errors.province | first }}</span>
+              {% endif %}	
+            </div>
             <button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
             
              {{ csrf.field | raw }}
