--- a/resources/views/users/view.twig
+++ b/resources/views/users/view.twig
@@ -12,7 +12,7 @@
               </div>
                 <hr>
               <ul class="container details">
-                <li><p><span class="glyphicon glyphicon-earphone one" style="width:50px;"></span>+91 90000 00000</p></li>
+                <li><p><span class="glyphicon glyphicon-earphone one" style="width:50px;"></span>{{ user.phone }}</p></li>
                 <li><p><span class="glyphicon glyphicon-envelope one" style="width:50px;"></span>{{ user.email }}</p></li>
                 <li><p><span class="glyphicon glyphicon-map-marker one" style="width:50px;"></span>{{ user.created_at }}</p></li>
                 <li><p><span class="glyphicon glyphicon-new-window one" style="width:50px;"></span><a href="{{ path_for('posts.index', {'id':user.id}) }}">{{ user.first_name }}'s posts</p></a>
