--- a/resources/views/auth/password/reset_password.twig
+++ b/resources/views/auth/password/reset_password.twig
@@ -1,43 +1,36 @@
 {% extends 'templates/app.twig' %}
-
-	{% block content %}
-
-        <div class="col-md-12 col-lg-12 " >
-        		<!-- Display Errors --> 
-			 {% for error in errors %}
-				{% for error_message in error %}
-		       		 <div class="alert alert-danger alert-dismissible" role="alert">
-					  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					   {{ error_message|e }}
-					</div>
-		    	{% endfor %}
-		    {% endfor %}
-
-
-		<div class="col-md-6 col-lg-6 col-md-offset-3">
-		<h4><span class="fui-user"></span> Change Password</h4>
-
-          <div class="login-form" >
-          <form action="{{ path_for('auth.password.change') }}" method="post" autocomplete="off"> 
-            
-            
-            <div class="form-group {{ errors.old_password ? 'has-error' : '' }}">
-              <input type="old_password" class="form-control login-field" value="" name="old_password" placeholder="Enter your old password" id="login-old_password">
-              <label class="login-field-icon fui-user" for="login-old_password">Enter your old password</label>
-              
-              {% if errors.old_password %}
-              	<span class="help-block">{{ errors.old_password | first }}</span>
-              {% endif %}	
+{% block content %}
+<div
+    class="col-md-12 col-lg-12 ">
+    <!-- Display Errors -->
+    {% for error in errors %}
+        {% for error_message in error %}
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <button aria-label="Close" class="close" data-dismiss="alert" type="button">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                {{ error_message|e }}
             </div>
-            
-
-
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Change Password</button>
-            
-             {{ csrf.field | raw }}
-            <a class="login-link" href="{{ path_for('auth.signin')}}">Sign In</a>
+        {% endfor %}
+    {% endfor %}
+    <div class="col-md-6 col-lg-6 col-md-offset-3">
+        <h4>
+            <span class="fui-user"></span>
+            Change Password</h4>
+        <div class="login-form">
+            <form action="{{ path_for('auth.password.change') }}" method="post" autocomplete="off">
+                <div class="form-group {{ errors.old_password ? 'has-error' : '' }}">
+                    <input class="form-control login-field" id="login-old_password" name="old_password" placeholder="Enter your old password" type="old_password" value="">
+                    <label class="login-field-icon fui-user" for="login-old_password">Enter your old password</label>
+                    {% if errors.old_password %}
+                        <span class="help-block">{{ errors.old_password | first }}</span>
+                    {% endif %}
+                </div>
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Change Password</button>
+                {{ csrf.field | raw }}
+                <a class="login-link" href="{{ path_for('auth.signin')}}">Sign In</a>
             </form>
-          </div>
-          </div>
         </div>
-	{% endblock%}
+    </div>
+</div>
+{% endblock%}
