--- a/resources/views/countries/edit.twig
+++ b/resources/views/countries/edit.twig
@@ -1,58 +1,50 @@
 {% extends 'templates/app.twig' %}
-
-	{% block content %}
-<div class="row">
-	<div class="col-md-10">
-		<div id="provincelist">
-			<div class="panel">
-                <div class="panel-heading">
-                    <div class="text-center">
-                        <div class="row">
-                            <div class="col-sm-9">
-                                <h3 class="pull-left">{{ country.name }} - {{ country.code }}</h3>
+{% block content %}
+    <div class="row">
+        <div class="col-md-10">
+            <div id="provincelist">
+                <div class="panel">
+                    <div class="panel-heading">
+                        <div class="text-center">
+                            <div class="row">
+                                <div class="col-sm-9">
+                                    <h3 class="pull-left">{{ country.name }}
+                                        -
+                                        {{ country.code }}</h3>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="panel-body">
+                        <div class="login-form">
+                            <form action="{{ path_for('countries.edit', {'id': country.id}) }}" method="post" autocomplete="off">
+                                <div class="form-group {{ errors.name ? 'has-error' : '' }}">
+                                    <input type="text" class="form-control login-field" name="name" placeholder="Enter country name" value="{{country.name}}">
+                                    <label class="login-field-icon fui-user" for="name"></label>
+                                    {% if errors.name %}
+                                        <span class="help-block">{{ errors.name | first }}</span>
+                                    {% endif %}
+                                </div>
+                                <div class="form-group {{ errors.code ? 'has-error' : '' }}">
+                                    <input type="text" class="form-control login-field" name="code" placeholder="Enter country code" value="{{country.code}}">
+                                    <label class="login-field-icon fui-user" for="code"></label>
+                                    {% if errors.code %}
+                                        <span class="help-block">{{ errors.code | first }}</span>
+                                    {% endif %}
+                                </div>
+                                <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+                                {{ csrf.field | raw }}
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                
-            <div class="panel-body">
-                <div class="login-form" >
-          <form action="{{ path_for('countries.edit', {'id': country.id}) }}" method="post" autocomplete="off"> 
-            <div class="form-group {{ errors.name ? 'has-error' : '' }}">
-              <input type="text" class="form-control login-field"  name="name" placeholder="Enter country name" value="{{country.name}}">
-              <label class="login-field-icon fui-user" for="name"></label>
-              {% if errors.name %}
-              	<span class="help-block">{{ errors.name | first }}</span>
-              {% endif %}
             </div>
-
-            <div class="form-group {{ errors.code ? 'has-error' : '' }}">
-              <input type="text" class="form-control login-field"  name="code" placeholder="Enter country code"  value="{{country.code}}">
-              <label class="login-field-icon fui-user" for="code"></label>
-              {% if errors.code %}
-              	<span class="help-block">{{ errors.code | first }}</span>
-              {% endif %}
-            </div>
-           
-            <button class="btn btn-primary btn-lg" type="submit">Submit</button>
-            
-             {{ csrf.field | raw }}
-            </form>
-          </div>
-            </div>
-            
         </div>
-        
-       </div>
-    </div>
-		<div class="text-center">
+        <div class="text-center">
             <a href="{{ path_for('posts.add') }}" class="btn btn-primary">New Post</a>
         </div>
     </div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-1">
-        </div>
-    </div>
-{% endblock %}
+    <div class="col-md-1"></div>
+    <div class="col-md-3"></div>
+    <div class="col-md-1"></div>
+</div>{% endblock %}
