--- a/resources/views/templates/app.twig
+++ b/resources/views/templates/app.twig
@@ -1,64 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Job-Recruitment Website</title>
-		
-<!-- Latest compiled and minified CSS -->
-<link href="{{ base_url()}}/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Loading Flat UI -->
-<link href="{{ base_url()}}/css/flat-ui.min.css" rel="stylesheet">
-
-
-<!-- Import your own custom CSS file -->
-<link rel="stylesheet" href="{{ base_url()}}/css/custom.css" />
-
-
-<!-- Import fontawesome for nice icons. Find icons here => http://fontawesome.io/icons/ -->
-<script src="https://kit.fontawesome.com/febafebe3a.js"></script>
-<!-- Getting variable from controller -->
-<!-- <script src="{{ fontAwesomeKitCode }}"></script> -->
-
-	</head>
-	
-	<body>
-		
-		
-		{% include 'templates/partials/navigation.twig' %}
-    
-	{% include 'templates/partials/flash.twig' %}
-		   
-
-		<div class="container" style="padding-top: 70px;">
-		
-			<!-- Display the rest of the content -->
-			{% block content %}{% endblock %}
-		</div>
-
-		<br/>
-
-		<!-- {% include 'templates/partials/footer.twig' %} -->
-		
-		
-		
-		
-		
-		
-		
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" > </script>
-		<!-- Latest compiled and minified JavaScript -->
-		  <!-- Include all compiled plugins (below), or include individual files as needed -->
-    
-    <!-- Enabling Bootstrap's javascript may cause some problems such as dropdowns not working -->
-	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
-				integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
-				crossorigin="anonymous"></script> -->
-
-<!-- flat-ui javascript file -->
-<script src="{{ base_url()}}/js/vendor/video.js"></script>
-    <script src="{{ base_url()}}/js/flat-ui.min.js"></script>
-    
-
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Job-Recruitment Website</title>
+        <!-- Latest compiled and minified CSS -->
+        <link
+        href="{{ base_url()}}/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Loading Flat UI -->
+        <link
+        href="{{ base_url()}}/css/flat-ui.min.css" rel="stylesheet">
+        <!-- Import your own custom CSS file -->
+        <link
+        rel="stylesheet" href="{{ base_url()}}/css/custom.css"/>
+        <!-- Import fontawesome for nice icons. Find icons here => http://fontawesome.io/icons/ -->
+        <script src="https://kit.fontawesome.com/febafebe3a.js"></script>
+        <!-- Getting variable from controller -->
+        <!-- <script src="{{ fontAwesomeKitCode }}"></script> -->
+    </head>
+    <body>
+        {% include 'templates/partials/navigation.twig' %}
+        {% include 'templates/partials/flash.twig' %}
+        <div
+            class="container" style="padding-top: 70px;">
+            <!-- Display the rest of the content -->
+            {% block content %}{% endblock %}
+        </div>
+        <br/>
+        <!-- {% include 'templates/partials/footer.twig' %} -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <!-- Enabling Bootstrap's javascript may cause some problems such as dropdowns not working -->
+        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+                				integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
+                				crossorigin="anonymous"></script> -->
+        <!-- flat-ui javascript file --><script src="{{ base_url()}}/js/vendor/video.js"> </script>
+        <script src="{{ base_url()}}/js/flat-ui.min.js"></script>
+    </body>
 </html>
