--- a/resources/views/templates/partials/navigation.twig
+++ b/resources/views/templates/partials/navigation.twig
@@ -1,60 +1,98 @@
 <nav class="navbar navbar-inverse navbar-embossed col-md-12" role="navigation">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
-                <span class="sr-only">Toggle navigation</span>
-              </button>
-              <a class="navbar-brand" href="{{ path_for('home')}}">Job-Recruitment Website</a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-collapse-01">
-              <ul class="nav navbar-nav navbar-right">
-                
-                <!-- If User is logged in -->
-                {% if auth.check %}
+    <div class="navbar-header">
+        <button class="navbar-toggle" data-target="#navbar-collapse-01" data-toggle="collapse" type="button">
+            <span class="sr-only">Toggle navigation</span>
+        </button>
+        <a class="navbar-brand" href="{{ path_for('home')}}">Job-Recruitment Website</a>
+    </div>
+    <div class="collapse navbar-collapse" id="navbar-collapse-01">
+        <ul
+            class="nav navbar-nav navbar-right">
+            <!-- If User is logged in -->
+            {% if auth.check %}
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ auth.user.first_name }} {{ auth.user.last_name }} <b class="caret"></b></a>
-                  <span class="dropdown-arrow"></span>
-                  <ul class="dropdown-menu">
-                    <li><a href="{{ path_for('users.view', { 'id': auth.user.id }) }}">My Profile</a></li>
-                   
-                    <li><a href="{{ path_for('posts.index', {'user_id':  auth.user.id }) }}">My Posts</a></li> 
-                    <li><a href="{{ path_for('auth.password.change') }}">Change Password</a></li>
-
-                    <li class="divider"></li>
-                     <li><a href="{{ path_for('auth.signout')}}">Logout</a></li>
-                  </ul>
-                </li> 
-
-                      <!-- If User is admin -->
-                      {% if auth.user.role_id < 3 and auth.user.role_id != null %}
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin menu <b class="caret"></b></a>
-                                <span class="dropdown-arrow"></span>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="{{ path_for('users.index') }}">All Users </a></li>
-                                        <li><a href="{{ path_for('posts.index') }}">All Posts </a></li>  
-                                        <li><a href="{{ path_for('roles.index') }}">All Roles </a></li>
-                                        <li><a href="{{ path_for('countries.index') }}">All Countries </a></li>
-                                        <li><a href="{{ path_for('provinces.index') }}">All Provinces </a></li> 
-                                    </ul>
-                                </li> 
-                          {% endif %}
-                
-                {% else %}
-                 <li><a href="{{ path_for('auth.signup')}}"><i class="fas fa-user-plus"></i> Signup</a></li>
-                 <li><a href="{{ path_for('auth.signin')}}"><i class="fas fa-sign-in-alt"></i> Signin</a></li>
-                
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ auth.user.first_name }}
+                        {{ auth.user.last_name }}
+                        <b class="caret"></b>
+                    </a>
+                    <span class="dropdown-arrow"></span>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="{{ path_for('users.view', { 'id': auth.user.id }) }}">My Profile</a>
+                        </li>
+                        <li>
+                            <a href="{{ path_for('posts.index', {'user_id': auth.user.id }) }}">My Posts</a>
+                        </li>
+                        <li>
+                            <a href="{{ path_for('auth.password.change') }}">Change Password</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="{{ path_for('auth.signout')}}">Logout</a>
+                        </li>
+                    </ul>
+                </li>
+                <!-- If User is admin -->
+                {% if auth.user.role_id < 3 and auth.user.role_id != null %}
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Admin menu
+                            <b class="caret"></b>
+                        </a>
+                        <span class="dropdown-arrow"></span>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="{{ path_for('users.index') }}">All Users
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ path_for('posts.index') }}">All Posts
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ path_for('roles.index') }}">All Roles
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ path_for('countries.index') }}">All Countries
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ path_for('provinces.index') }}">All Provinces
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
                 {% endif %}
-                <li><a href="{{ path_for('about')}}"><i class="fas fa-users"></i> About Us</a></li>
-               </ul>
-               <form class="navbar-form navbar-right" action="#" role="search">
-                <div class="form-group">
-                  <div class="input-group">
-                    <input class="form-control" id="navbarInput-01" type="search" placeholder="Search">
+            {% else %}
+                <li>
+                    <a href="{{ path_for('auth.signup')}}">
+                        <i class="fas fa-user-plus"></i>
+                        Signup</a>
+                </li>
+                <li>
+                    <a href="{{ path_for('auth.signin')}}">
+                        <i class="fas fa-sign-in-alt"></i>
+                        Signin</a>
+                </li>
+            {% endif %}
+            <li>
+                <a href="{{ path_for('about')}}">
+                    <i class="fas fa-users"></i>
+                    About Us</a>
+            </li>
+        </ul>
+        <form action="#" class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+                <div class="input-group">
+                    <input class="form-control" id="navbarInput-01" placeholder="Search" type="search">
                     <span class="input-group-btn">
-                      <button type="submit" class="btn"><span class="fui-search"></span></button>
+                        <button class="btn" type="submit">
+                            <span class="fui-search"></span>
+                        </button>
                     </span>
-                  </div>
                 </div>
-              </form>
-            </div><!-- /.navbar-collapse -->
-          </nav>
+            </div>
+        </form>
+    </div>
+    <!-- /.navbar-collapse -->
+</nav>
