--- a/resources/views/templates/partials/navigation.twig
+++ b/resources/views/templates/partials/navigation.twig
@@ -56,6 +56,10 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="{{ path_for('skills.index') }}">All Skills
+                                </a>
+                            </li>
+                            <li>
                                 <a href="{{ path_for('countries.index') }}">All Countries
                                 </a>
                             </li>
