--- a/resources/views/skills/edit.twig
+++ b/resources/views/skills/edit.twig
@@ -8,7 +8,9 @@
                         <div class="text-center">
                             <div class="row">
                                 <div class="col-sm-9">
-                                    <h3 class="pull-left">{{ skill.title }}</h3>
+                                    <h3 class="pull-left">Edit
+                                        {{ skill.name }}
+                                        skill</h3>
                                 </div>
                                 <div class="col-sm-3">
                                     <h4 class="pull-right">
@@ -23,19 +25,25 @@
                     <div class="panel-body">
                         <div class="login-form">
                             <form action="{{ path_for('skills.edit', {'id': skill.id}) }}" method="post" autocomplete="off">
-                                <div class="form-group {{ errors.title ? 'has-error' : '' }}">
-                                    <input type="text" class="form-control login-field" value="{{ skill.title }}" name="title" placeholder="Enter your title">
-                                    <label class="login-field-icon fui-user" for="login-first-name"></label>
-                                    {% if errors.title %}
-                                        <span class="help-block">{{ errors.title | first }}</span>
+                                <div class="form-group {{ errors.name ? 'has-error' : '' }}">
+                                    <input class="form-control login-field" name="name" placeholder="Enter skill name" type="text" value="{{ skill.name }}">
+                                    <label class="login-field-icon fui-user" for="login-name"></label>
+                                    {% if errors.name %}
+                                        <span class="help-block">{{ errors.name | first }}</span>
                                     {% endif %}
                                 </div>
-                                <div class="form-group {{ errors.body ? 'has-error' : '' }}">
-                                    <textarea class="form-control login-field" name="body" placeholder="Enter your content" rows="15">{{ skill.body }}"
-                                    </textarea>
-                                    <label class="login-field-icon fui-user" for="login-last-name"></label>
-                                    {% if errors.body %}
-                                        <span class="help-block">{{ errors.body | first }}</span>
+                                <div class="form-group {{ errors.description ? 'has-error' : '' }}">
+                                    <textarea class="form-control login-field" name="description" placeholder="Enter skill description" rows="3" value="{{ skill.description }}"></textarea>
+                                    <label class="login-field-icon fui-user" for="login-description"></label>
+                                    {% if errors.description %}
+                                        <span class="help-block">{{ errors.description | first }}</span>
+                                    {% endif %}
+                                </div>
+                                <div class="form-group {{ errors.url ? 'has-error' : '' }}">
+                                    <input class="form-control login-field" name="url" placeholder="Enter project url" type="text" value="{{ skill.url }}">
+                                    <label class="login-field-icon fui-user" for="login-url"></label>
+                                    {% if errors.url %}
+                                        <span class="help-block">{{ errors.url | first }}</span>
                                     {% endif %}
                                 </div>
                                 <button class="btn btn-primary btn-lg" type="submit">Submit</button>
@@ -45,9 +53,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="text-center">
-            <a href="{{ path_for('skills.add') }}" class="btn btn-primary">New Book</a>
         </div>
     </div>
     <div class="col-md-1"></div>
